--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
   <head>
     <title>Login</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Login</h1>
-    <form action="" method="post">
-      <label for="username">Usuário:</label>
-      <input type="text" id="username" name="username"><br><br>
-      <label for="password">Senha:</label>
-      <input type="password" id="password" name="password"><br><br>
-      <input type="submit" value="Entrar">
-    </form>
+    <div class="container">
+      <div class="login-form">
+        <h1>Login</h1>
+        <form action="" method="post">
+          <label for="username">Usuário:</label>
+          <input type="text" id="username" name="username"><br><br>
+          <label for="password">Senha:</label>
+          <input type="password" id="password" name="password"><br><br>
+          <input type="submit" value="Entrar">
+        </form>
+      </div>
+    </div>
   </body>
 </html>
