--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
+<!-- index.html (página de login) -->
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="login-form">
-        <h1>Login</h1>
-        <form action="" method="post">
-          <label for="username">Usuário:</label>
-          <input type="text" id="username" name="username"><br><br>
-          <label for="password">Senha:</label>
-          <input type="password" id="password" name="password"><br><br>
-          <input type="submit" value="Entrar">
-        </form>
-      </div>
-    </div>
-  </body>
+<head>
+  <title>Login</title>
+</head>
+<body>
+  <h1>Login</h1>
+  <form>
+    <label for="username">Usuário:</label>
+    <input type="text" id="username" name="username"><br><br>
+    <label for="password">Senha:</label>
+    <input type="password" id="password" name="password"><br><br>
+    <input type="button" value="Logar" onclick="login()">
+  </form>
+
+  <script>
+    function login() {
+      // Verificar se o login foi realizado com sucesso
+      // (neste exemplo, vamos supor que o login foi realizado com sucesso)
+      if (true) {
+        window.location.href = 'dashboard.html';
+      } else {
+        alert("Erro ao logar!");
+      }
+    }
+  </script>
+</body>
 </html>
