--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,36 @@
 <!-- dashboard.html (página de destino) -->
 
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Bem-vindo ao dashboard!</h1>
-  <!-- Aqui você pode adicionar os módulos que você deseja -->
+  <header>
+    <h1>Bem-vindo ao dashboard!</h1>
+  </header>
+  <main>
+    <!-- Aqui você pode adicionar os módulos que você deseja -->
+  </main>
 </body>
 </html>
