--- a/dashboard.html
+++ b/dashboard.html
@@ -1,16 +1,16 @@
-<!-- dashboard.html (página de destino) -->
+<!-- painel.html (página de destino) -->
 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
+  <title>Painel</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Bem-vindo ao dashboard!</h1>
+    <h1>Bem-vindo ao painel!</h1>
   </header>
   <main>
     <!-- Aqui você pode adicionar os módulos que você deseja -->
