--- a/dashboard.html
+++ b/dashboard.html
@@ -1,19 +1,33 @@
-<!-- painel.html (página de destino) -->
+<!-- dashboard.html -->
 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Bem-vindo ao painel!</h1>
+    <h1>Dashboard</h1>
   </header>
   <main>
-    <!-- Aqui você pode adicionar os módulos que você deseja -->
+    <div class="bloco">
+      <h2>Peritagens</h2>
+    </div>
+    <div class="bloco">
+      <h2>Bloco 2</h2>
+    </div>
+    <div class="bloco">
+      <h2>Bloco 3</h2>
+    </div>
+    <div class="bloco">
+      <h2>Bloco 4</h2>
+    </div>
+    <div class="bloco">
+      <h2>Bloco 5</h2>
+    </div>
   </main>
 </body>
 </html>
