--- a/dashboard.html
+++ b/dashboard.html
@@ -13,20 +13,65 @@
     <h1>Dashboard</h1>
   </header>
   <main>
-    <div class="bloco">
-      <h2>Peritagens</h2>
+    <div class="linha">
+      <div class="modulo">
+        <h2>Peritagens</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 2</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 3</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 4</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 5</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 6</h2>
+      </div>
     </div>
-    <div class="bloco">
-      <h2>Bloco 2</h2>
+    <div class="linha">
+      <div class="modulo">
+        <h2>Bloco 7</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 8</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 9</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 10</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 11</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 12</h2>
+      </div>
     </div>
-    <div class="bloco">
-      <h2>Bloco 3</h2>
-    </div>
-    <div class="bloco">
-      <h2>Bloco 4</h2>
-    </div>
-    <div class="bloco">
-      <h2>Bloco 5</h2>
+    <div class="linha">
+      <div class="modulo">
+        <h2>Bloco 13</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 14</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 15</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 16</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 17</h2>
+      </div>
+      <div class="modulo">
+        <h2>Bloco 18</h2>
+      </div>
     </div>
   </main>
 </body>
