--- a/dashboard.html
+++ b/dashboard.html
@@ -14,64 +14,15 @@
   </header>
   <main>
     <div class="linha">
-      <div class="modulo">
-        <h2>Peritagens</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 2</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 3</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 4</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 5</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 6</h2>
-      </div>
-    </div>
-    <div class="linha">
-      <div class="modulo">
-        <h2>Bloco 7</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 8</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 9</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 10</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 11</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 12</h2>
-      </div>
-    </div>
-    <div class="linha">
-      <div class="modulo">
-        <h2>Bloco 13</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 14</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 15</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 16</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 17</h2>
-      </div>
-      <div class="modulo">
-        <h2>Bloco 18</h2>
-      </div>
+      <a href="#" class="modulo clicavel">
+        <h2>Quadrado 1</h2>
+      </a>
+      <a href="#" class="modulo clicavel">
+        <h2>Quadrado 2</h2>
+      </a>
+      <a href="#" class="modulo clicavel">
+        <h2>Quadrado 3</h2>
+      </a>
     </div>
   </main>
 </body>
