--- a/dashboard.html
+++ b/dashboard.html
@@ -15,13 +15,16 @@
   <main>
     <div class="linha">
       <a href="#" class="modulo clicavel">
-        <h2>Quadrado 1</h2>
+        <h2>Peritagens</h2>
       </a>
       <a href="#" class="modulo clicavel">
-        <h2>Quadrado 2</h2>
+        <h2>Orçamentos</h2>
       </a>
       <a href="#" class="modulo clicavel">
-        <h2>Quadrado 3</h2>
+        <h2>Contas a Pagar</h2>
+      </a>
+      <a href="#" class="modulo clicavel">
+        <h2>Contas a Receber</h2>
       </a>
     </div>
   </main>
