--- a/dashboard.html
+++ b/dashboard.html
@@ -23,10 +23,12 @@
       <a href="#" class="modulo clicavel">
         <h2>Contas a Pagar</h2>
       </a>
+    </div>
+    <div class="linha">
       <a href="#" class="modulo clicavel">
         <h2>Contas a Receber</h2>
-      </a>
-    </div>
+      </a>      
+      </div>
   </main>
 </body>
 </html>
