--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <div class="linha">
-      <a href="#" class="modulo clicavel">
+      <a href="peritagens.html" class="modulo clicavel">
         <h2>Peritagens</h2>
       </a>
       <a href="#" class="modulo clicavel">
