--- a/peritagens.html
+++ b/peritagens.html
@@ -1,1 +1,23 @@
+<!-- peritagens.html -->
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peritagens</title>
+  <link rel="stylesheet" href="styled.css">
+</head>
+<body>
+  <header>
+    <h1>Peritagens</h1>
+  </header>
+  <main>
+    <form>
+      <label for="equipamento">Nome do Equipamento:</label>
+      <input type="text" id="equipamento" name="equipamento"><br><br>
+      <input type="submit" value="Enviar">
+    </form>
+  </main>
+</body>
+</html>
