--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <h1>Galcromo</h1>
+  </header>
   <div class="container">
     <div class="login-module">
       <h2>Login</h2>
