--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Galcromo</h1>
-  </header>
   <div class="container">
+    <header class="header">
+      <h1>Galcromo</h1>
+    </header>
     <div class="login-module">
       <h2>Login</h2>
       <form>
