--- a/peritagens.html
+++ b/peritagens.html
@@ -6,18 +6,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Peritagens</title>
-  <link rel="stylesheet" href="styled.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Peritagens</h1>
-  </header>
-  <main>
-    <form>
-      <label for="equipamento">Nome do Equipamento:</label>
-      <input type="text" id="equipamento" name="equipamento"><br><br>
-      <input type="submit" value="Enviar">
-    </form>
-  </main>
+  <div class="top-bar">
+    <button class="back-button" onclick="goBack()">&larr; Voltar</button>
+  </div>
+  <!-- rest of the page content here -->
+  <script>
+    function goBack() {
+      window.location.href = 'dashboard.html';
+    }
+  </script>
 </body>
 </html>
