--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
   <div class="top-bar">
     <h1>Galcromo</h1>
+    <button class="back-button" onclick="goBack()">Voltar</button>
   </div>
   <div class="container">
     <div class="login-module">
       <h2>Login</h2>
-      <form>
+      <form id="login-form">
         <label for="username">Usuário:</label>
         <input type="text" id="username" name="username"><br><br>
         <label for="password">Senha:</label>
@@ -36,6 +37,17 @@
         alert("Erro ao logar!");
       }
     }
+
+    function goBack() {
+      window.location.href = 'dashboard.html';
+    }
+
+    // Add event listener to login form
+    document.getElementById("login-form").addEventListener("keypress", function(event) {
+      if (event.key === "Enter") {
+        login();
+      }
+    });
   </script>
 </body>
 </html>
