--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="top-bar">
+    <h1>Galcromo</h1>
+    <button class="back-button" onclick="goBack()">Voltar</button>
+  </div>
   <div class="container">
     <div class="login-module">
       <h2>Login</h2>
