--- a/peritagens.html
+++ b/peritagens.html
@@ -7,10 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Peritagens</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    .back-button {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  </style>
 </head>
 <body>
+  <button class="back-button" onclick="goBack()">&larr; Voltar</button>
   <div class="top-bar">
-    <button class="back-button" onclick="goBack()">&larr; Voltar</button>
     <h1>Peritagens</h1>
   </div>
   <div class="container">
