--- a/peritagens.html
+++ b/peritagens.html
@@ -10,8 +10,8 @@
   <style>
     .back-button {
       position: absolute;
-      top: 10;
-      left: 10;
+      top: 10px;
+      left: 10px;
     }
   </style>
 </head>
