--- a/peritagens.html
+++ b/peritagens.html
@@ -1,108 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Peritagem</title>
-    <link rel="stylesheet" href="styled.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulário de Peritagem</title>
+  <link rel="stylesheet" href="peritagem.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Formulário de Peritagem</h1>
-        <form id="formulario">
-            <div class="form-group">
-                <label for="nomeCliente">Nome do Cliente:</label>
-                <input type="text" id="nomeCliente" name="nomeCliente" required>
-            </div>
+  <form id="peritagem-form">
+    <h2>Formulário de Peritagem Atualizado Completo</h2>
+    <section>
+      <label for="nome-do-cliente">Nome do Cliente:</label>
+      <input type="text" id="nome-do-cliente" name="nome-do-cliente">
+    </section>
+    <section>
+      <label for="ss-numero">SS (Número de Identificação):</label>
+      <input type="text" id="ss-numero" name="ss-numero">
+      <button id="add-ss-button">Adicionar mais IDs</button>
+      <div id="ss-list"></div>
+    </section>
+    <section>
+      <label for="nome-do-equipamento">Nome do Equipamento:</label>
+      <input type="text" id="nome-do-equipamento" name="nome-do-equipamento">
+    </section>
+    <section id="peca-section">
+      <h3>Adicionar Tipo de Peça:</h3>
+      <div id="peca-list">
+        <!-- dynamic list of peças will be generated here -->
+      </div>
+    </section>
+    <section>
+      <label for="data-da-peritagem">Data da Peritagem:</label>
+      <input type="datetime-local" id="data-da-peritagem" name="data-da-peritagem" readonly>
+    </section>
+    <section>
+      <label for="responsavel-pela-peritagem">Responsável pela Peritagem:</label>
+      <input type="text" id="responsavel-pela-peritagem" name="responsavel-pela-peritagem">
+    </section>
+    <section>
+      <label for="fotos-do-equipamento">Fotos do Equipamento:</label>
+      <input type="file" id="fotos-do-equipamento" name="fotos-do-equipamento" multiple>
+    </section>
+    <section>
+      <label for="diagnostico">Diagnóstico:</label>
+      <textarea id="diagnostico" name="diagnostico"></textarea>
+    </section>
+    <section>
+      <label for="sugestao-de-reparos">Sugestão de Reparos:</label>
+      <textarea id="sugestao-de-reparos" name="sugestao-de-reparos"></textarea>
+    </section>
+  </form>
 
-            <div class="form-group">
-                <label for="nomeEquipamento">Nome do Equipamento:</label>
-                <input type="text" id="nomeEquipamento" name="nomeEquipamento" required>
-            </div>
-
-            <div class="form-group">
-                <label for="ss">SS:</label>
-                <div class="ss-id-group">
-                    <input type="text" id="ss" name="ss" class="ss-input" required>
-                    <select id="id" name="id" class="id-select">
-                        <option value="">Selecione</option>
-                        <!-- Gerar opções de 1 a 50 -->
-                        <script>
-                            document.addEventListener('DOMContentLoaded', function() {
-                                var select = document.getElementById('id');
-                                for (var i = 1; i <= 50; i++) {
-                                    var option = document.createElement('option');
-                                    option.value = i;
-                                    option.textContent = i;
-                                    select.appendChild(option);
-                                }
-                            });
-                        </script>
-                    </select>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label for="responsavel">Nome do Responsável:</label>
-                <input type="text" id="responsavel" name="responsavel" required>
-            </div>
-
-            <div class="form-group">
-                <label for="dataPeritagem">Data da Peritagem:</label>
-                <input type="date" id="dataPeritagem" name="dataPeritagem" required>
-            </div>
-
-            <div class="form-group">
-                <label for="peça">Selecione a Peça:</label>
-                <select id="peça" name="peça">
-                    <option value="">Selecione</option>
-                    <option value="haste">Haste</option>
-                    <option value="camisa">Camisa</option>
-                    <option value="olhal">Olhal</option>
-                    <option value="flange">Flange</option>
-                    <option value="fundo">Fundo</option>
-                    <option value="embolo">Êmbolo</option>
-                    <option value="espacoador">Espaçador</option>
-                    <option value="jogoVedacao">Jogo de Vedação</option>
-                </select>
-            </div>
-
-            <div id="opcoesPeça" class="hidden form-group">
-                <p id="infoPeca"></p>
-
-                <div id="opcoesCheckbox">
-                    <!-- As opções serão inseridas aqui pelo JavaScript -->
-                </div>
-
-                <label for="diametro">Diâmetro (mm):</label>
-                <input type="text" id="diametro" name="diametro">
-
-                <label for="comprimento">Comprimento (mm):</label>
-                <input type="text" id="comprimento" name="comprimento">
-
-                <label for="largura">Largura (mm):</label>
-                <input type="text" id="largura" name="largura">
-            </div>
-
-            <button type="button" onclick="adicionarPeca()">Salvar Peça</button>
-        </form>
-
-        <h2>Resumo das Peças</h2>
-        <table id="tabelaResumo">
-            <thead>
-                <tr>
-                    <th>Peça</th>
-                    <th>Diâmetro (mm)</th>
-                    <th>Comprimento (mm)</th>
-                    <th>Largura (mm)</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- As peças adicionadas aparecerão aqui -->
-            </tbody>
-        </table>
-    </div>
-    <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
