--- a/peritagens.html
+++ b/peritagens.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <form id="peritagem-form">
-    <h2>Formulário de Peritagem Atualizado Completo</h2>
+    <h2>Formulário de Peritagem</h2>
     <section>
       <label for="nome-do-cliente">Nome do Cliente:</label>
       <input type="text" id="nome-do-cliente" name="nome-do-cliente">
