--- a/peritagens.html
+++ b/peritagens.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário de Peritagem</title>
-  <link rel="stylesheet" href="peritagem.css">
+  <link rel="stylesheet" href="styled.css">
 </head>
 <body>
   <form id="peritagem-form">
