--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,3 @@
-<!-- dashboard.html -->
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -26,7 +24,15 @@
       <a href="#" class="modulo clicavel">
         <h2>Contas a Receber</h2>
       </a>
-      </div>
+    </div>
+    <section class="configuracoes">
+      <h2>Configurações</h2>
+      <ul>
+        <li><a href="#">Alterar senha</a></li>
+        <li><a href="#">Editar perfil</a></li>
+        <li><a href="#">Configurações de notificação</a></li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
