--- a/dashboard.html
+++ b/dashboard.html
@@ -24,15 +24,10 @@
       <a href="#" class="modulo clicavel">
         <h2>Contas a Receber</h2>
       </a>
+      <a href="conf.html" class="modulo clicavel">
+        <h2>Configurações</h2>
+      </a>
     </div>
-    <section class="configuracoes">
-      <h2>Configurações</h2>
-      <ul>
-        <li><a href="#">Alterar senha</a></li>
-        <li><a href="#">Editar perfil</a></li>
-        <li><a href="#">Configurações de notificação</a></li>
-      </ul>
-    </section>
   </main>
 </body>
 </html>
