--- a/conf.html
+++ b/conf.html
@@ -1,1 +1,58 @@
+ <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Configurações</title>
+  <link rel="stylesheet" href="styled.css">
+</head>
+<body>
+  <header>
+    <h1>Configurações</h1>
+  </header>
+  <main>
+    <div class="container">
+      <form id="register-form">
+        <h2>Cadastrar Usuário</h2>
+        <div class="input-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" name="username">
+          <div class="error"></div>
+        </div>
+        <div class="input-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email">
+          <div class="error"></div>
+        </div>
+        <div class="input-group">
+          <label for="password">Senha</label>
+          <input type="password" id="password" name="password">
+          <div class="error"></div>
+        </div>
+        <div class="input-group">
+          <label for="cpassword">Confirmar Senha</label>
+          <input type="password" id="cpassword" name="cpassword">
+          <div class="error"></div>
+        </div>
+        <button type="submit">Cadastrar</button>
+      </form>
 
+      <h2>Usuários Cadastrados</h2>
+      <table id="user-table">
+        <thead>
+          <tr>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody id="user-list">
+          <!-- User list will be populated here -->
+        </tbody>
+      </table>
+    </div>
+
+    <script src="script.js"></script>
+  </main>
+</body>
+</html>
