--- a/conf.html
+++ b/conf.html
@@ -7,19 +7,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <form id="registration-form" action="https://script.google.com/macros/s/AKfycbx7859P8b6DaJ6en759vIwO3xxh6zLQw5RiCUAba-lQ28ArHHlVI-jEsmbFoD1Ud4ElVA/exec" method="post">
-    <h2>Registration Form</h2>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="Name" required>
-    <br><br>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="Username" required>
-    <br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="Password" required>
-    <br><br>
-    <button type="submit">Register</button>
-  </form>
+  <div class="container">
+    <form id="registration-form" action="https://script.google.com/macros/s/AKfycbwEM0fY7rAb-YrEph3vGVlHGCLl6TOc6YNOkLJ5C8PrqWRK2lGhYAkY6PrcI3JasA3yqQ/exec" method="post">
+      <h2>Registration Form</h2>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="Name" required>
+      <br><br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="Password" required>
+      <br><br>
+      <button type="submit">Register</button>
+    </form>
+  </div>
 
   <script>
     const form = document.getElementById('registration-form');
