--- a/conf.html
+++ b/conf.html
@@ -6,7 +6,7 @@
   <title>Cadastro de Usuário</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Calibri, sans-serif;
       background-color: #f4f4f4;
       margin: 0;
       padding: 0;
