--- a/peritagens.html
+++ b/peritagens.html
@@ -1,98 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulário de Peritagem</title>
-  <link rel="stylesheet" href="peritagem.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peritagem</title>
+    <link rel="stylesheet" href="peritagem.css">
 </head>
 <body>
-  <div class="container">
-    <form id="peritagem-form">
-      <h2 class="title">Formulário de Peritagem Atualizado Completo</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <section>
-            <label for="nome-do-cliente">Nome do Cliente:</label>
-            <input type="text" id="nome-do-cliente" name="nome-do-cliente" class="form-input">
-          </section>
-        </div>
-        <div class="col-md-6">
-          <section>
-            <label for="ss-numero">SS (Número de Identificação):</label>
-            <select id="ss-numero" name="ss-numero" class="form-input">
-              <option value="">Selecione</option>
-              <script>
-                for (let i = 1; i <= 50; i++) {
-                  document.write(`<option value="${i}">${i}</option>`);
-                }
-              </script>
-            </select>
-            <div class="button-container">
-              <button id="add-ss-button" class="btn btn-primary">Adicionar mais IDs</button>
+    <div class="container">
+        <h1>Peritagem</h1>
+        <form id="peritagemForm">
+            <div class="form-group">
+                <label for="clientName">Nome do Cliente</label>
+                <input type="text" id="clientName" required placeholder="Digite o nome do cliente">
             </div>
-            <div id="ss-list"></div>
-          </section>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <section>
-            <label for="nome-do-equipamento">Nome do Equipamento:</label>
-            <input type="text" id="nome-do-equipamento" name="nome-do-equipamento" class="form-input">
-          </section>
-        </div>
-        <div class="col-md-6">
-          <section id="peca-section">
-            <h3>Adicionar Tipo de Peça:</h3>
-            <div id="peca-list">
-              <!-- dynamic list of peças will be generated here -->
+            <div class="form-group">
+                <label for="equipmentName">Nome do Equipamento</label>
+                <input type="text" id="equipmentName" required placeholder="Digite o nome do equipamento">
             </div>
-          </section>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <section>
-            <label for="data-da-peritagem">Data da Peritagem:</label>
-            <input type="datetime-local" id="data-da-peritagem" name="data-da-peritagem" readonly class="form-input">
-          </section>
-        </div>
-        <div class="col-md-6">
-          <section>
-            <label for="responsavel-pela-peritagem">Responsável pela Peritagem:</label>
-            <input type="text" id="responsavel-pela-peritagem" name="responsavel-pela-peritagem" class="form-input">
-          </section>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <section>
-            <label for="fotos-do-equipamento">Fotos do Equipamento:</label>
-            <input type="file" id="fotos-do-equipamento" name="fotos-do-equipamento" multiple class="form-input">
-          </section>
-        </div>
-        <div class="col-md-6">
-          <section>
-            <label for="diagnostico">Diagnóstico:</label>
-            <textarea id="diagnostico" name="diagnostico" class="form-input"></textarea>
-          </section>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <section>
-            <label for="sugestao-de-reparos">Sugestão de Reparos:</label>
-            <textarea id="sugestao-de-reparos" name="sugestao-de-reparos" class="form-input"></textarea>
-          </section>
-        </div>
-      </div>
-      <div class="button-container">
-        <button id="enviar-formulario" class="btn btn-primary">Enviar Formulário</button>
-      </div>
-    </form>
-  </div>
+            <div class="form-group">
+                <label for="ssNumber">SS (Número de Série)</label>
+                <input type="text" id="ssNumber" required placeholder="Digite o número de série">
+                <select id="idNumber">
+                    <option value="">ID</option>
+                    <!-- Gera opções de 1 a 50 -->
+                    <script>
+                        for (let i = 1; i <= 50; i++) {
+                            document.write(`<option value="${i}">${i}</option>`);
+                        }
+                    </script>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="responsibleName">Nome do Responsável pela Peritagem</label>
+                <input type="text" id="responsibleName" required placeholder="Digite o nome do responsável">
+            </div>
+            <div class="form-group">
+                <label for="date">Data da Peritagem</label>
+                <input type="text" id="date" value="${new Date().toLocaleDateString('pt-BR')}" disabled>
+            </div>
+            <div class="form-group">
+                <label for="pieceSelect">Selecionar Peça</label>
+                <select id="pieceSelect" required>
+                    <option value="">Escolha uma peça</option>
+                    <option value="haste">Haste</option>
+                    <option value="camisa">Camisa</option>
+                    <option value="olhal">Olhal</option>
+                    <option value="flange">Flange</option>
+                    <option value="fundo">Fundo</option>
+                    <option value="embolo">Êmbolo</option>
+                    <option value="espacador">Espaçador</option>
+                    <option value="jogoDeVedacao">Jogo de Vedação</option>
+                </select>
+            </div>
+            <div class="form-group" id="pieceOptions" style="display: none;">
+                <div id="actions"></div>
+                <div class="dimension-group">
+                    <label for="diameter">Diâmetro (mm)</label>
+                    <input type="number" id="diameter" placeholder="Digite o diâmetro">
+                </div>
+                <div class="dimension-group">
+                    <label for="length">Comprimento (mm)</label>
+                    <input type="number" id="length" placeholder="Digite o comprimento">
+                </div>
+                <div class="dimension-group">
+                    <label for="width">Largura (mm)</label>
+                    <input type="number" id="width" placeholder="Digite a largura">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="imageUpload">Anexar Fotos</label>
+                <input type="file" id="imageUpload" accept="image/*">
+            </div>
+            <button type="submit">Adicionar Peça</button>
+        </form>
+        <h2>Resumo das Peças</h2>
+        <table id="summaryTable">
+            <thead>
+                <tr>
+                    <th>Peça</th>
+                    <th>Ação</th>
+                    <th>Diâmetro (mm)</th>
+                    <th>Comprimento (mm)</th>
+                    <th>Largura (mm)</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 
-  <script src="script.js"></script>
+    <script src="peritagem.js"></script>
 </body>
 </html>
